test/errhandling/ferguson/e-inherit-throws-nothrows.good
e-inherit-throws-nothrows.chpl:6: error: conflicting throws for 'D.foo()'
e-inherit-throws-nothrows.chpl:2: error: throwing function 'C.foo()'
e-inherit-throws-nothrows.chpl:6: error: overridden by non-throwing function 'D.foo()'
